2007-09-10  Marco Barisione <marco@barisione.org>

	* glib/gregex.c: define PCRE_ERROR_NULLWSLIMIT if it's not defined by
	PCRE, has PCRE 7.3 removed this definition. (#475474)
	* configure.in: bump PCRE requirement to version 7.2.

2007-09-05  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gregex.c: Fix header inclusion. (#473879, Peter Kjellerstedt)

Wed Aug 29 12:08:40 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.h (g_once_init_enter): fixed compiler warning about
	loosing volatile qualifier, bug #457641.

2007-08-24  Michael Natterer  <mitch@imendio.com>

	* glib/gslice.[ch]: make g_slice_copy() take a gconstpointer
	instead of a gpointer.

2007-08-22  Cody Russell  <bratsche@gnome.org>

	* glib/gprintf.c: Document all printf functions to use
	"bytes" terminology rather than "characters". (#469051)

2007-08-20  Behdad Esfahbod  <behdad@gnome.org>

	* glib/guniprop.c: Document that g_unichar_get_script() is
	equivalent to pango_script_for_unichar().

2007-08-20  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gmappedfile.c:
	* glib/gregex.c:
	* glib/gstdio.c:
	Fix typos (#468694).

2007-08-14  Cody Russell  <bratsche@gnome.org>

	* gobject/gsignal.c: g_type_default_interface_ref() was not
	ensuring working g_signal_list_ids.  Added checks for
	!G_TYPE_IS_INTERFACE (itype).
	(#465625, by some guy who calls himself Yeti)

Tue Aug 14 02:06:10 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.c (g_once_init_enter_impl): prevent race covered
	by g_once_init_enter(), by checking for previous initializations
	before entering initialisation branch.

	* tests/onceinit.c: added multi-thread/multi-initializer stress test
	using unoptimized g_once_init_enter_impl().

Mon Aug 13 14:30:15 2007  Tim Janik  <timj@imendio.com>

	* tests/onceinit.c (main): fixed array size typo.

Mon Aug 13 14:21:44 2007  Tim Janik  <timj@imendio.com>

	* tests/onceinit.c: test g_once_init_*() before and after
	g_thread_init() and test concurrency resolution.
