@@ -3,6 +3,9 @@
 	* glib/gregex.c: define PCRE_ERROR_NULLWSLIMIT if it's not defined by
 	PCRE, has PCRE 7.3 removed this definition. (#475474)
 	* configure.in: bump PCRE requirement to version 7.2.
+	* glib/gregex.c: use pcre_get_stringnumber() in
+	get_matched_substring_number() if G_REGEX_DUPNAMES was not set.
+	(#444765, Yevgen Muntyan)
 
 2007-09-05  Behdad Esfahbod  <behdad@gnome.org>
 
